welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:2: error: ')' expected but integer literal found.
	if (noDoubles && die1 == dies 2 && 6 != b && a != 6 )  return a+b+1
                                      ^withoutDoubles:3: error: illegal start of simple expression
}
^